--- a/src/index.css
+++ b/src/index.css
@@ -977,11 +977,16 @@ textarea:focus {
      right: 0;
      padding: 1rem;
      background-color: #ececca;
-     animation: animate 0.5s linear ;
-     max-width: 360px;
+     max-width: 450px;
+     width: 345px;
      z-index: 1000;
-     font-size: 15px;
+     font-size: 14px;
 }
+.alert-error.animate,
+.alert-success.animate {
+     animation: animate 0.5s linear ;
+}
+
 .alert-error::before{
      content: "";
      position: absolute;
@@ -1011,7 +1016,7 @@ textarea:focus {
 }
 
 .close-alert {
-     font-size: 20px;
+     font-size: 18pxpx;
      position: absolute;
      right: .5rem;
      top: 50%;
